# sifs-genesis-brain

./: .gitignore  .gitmodules  BRAIN_CONTRACT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GENESIS_CUDA_SIFS.md  GENESIS_SIFS_AI_PLAN.md  GOAL.md  HOW_TO_CONTINUE.md  LICENSE  NEXT_PLAN.md  README.md  ROADMAP.md  SECURITY.md  SETUP_WINDOWS.md  SIFS_Genesis_Hybrid_Report.md  brain.toml  install_requirements.ps1  run_cargo.cmd  run_cargo.ps1  run_cartpole_agent.py  sifs_constants.json  sifs_genesis_hybrid.rs
config/: brain.example.toml
crates/sifs-genesis-core/: Cargo.toml
crates/sifs-genesis-core/benches/: bench.rs
crates/sifs-genesis-core/src/: agent_main.rs  lib.rs  main.rs
docs/: BENCHMARKS.md  BRAIN_CONFIG.md  BRAIN_CONTRACT.md  CATASTROPHIC_FORGETTING.md  CHECKPOINTING_WEIGHTS.md  CLIENT_INTEGRATION.md  D3_NEXT_STEPS.md  DAY_PHASE_GENESIS_MAPPING.md  NIGHT_PHASE.md  REPOS_AND_REFERENCE.md  SIFS_AGENTS_INTEGRATION.md  S_SHARDING_AND_GHOST.md  TRADING_REWARD_AND_DATA.md
experiments/: A0_result.md  B1_ANALYSIS_GAP_71.md  B1_NEXT_RECOMMENDATIONS.md  B1_calibration_results.md  B1_genesis_agi_reference.md  B1_status.md  B4_benchmarks.md  a0_sifs_off.txt  a0_sifs_on.txt
scripts/: brain_http_client.py  ci_check.ps1  compare_sifs.py  compare_sifs_i_sifs.py  export_sifs_constants.py  print_b1_reference_steps.py  run_b1_calibration.py  run_d3_backtest.py  trading_brain_loop.py
src/: bench.rs  constants.rs  fixed.rs  io.rs  main.rs  neuron.rs  phase.rs  runner.rs
tests/: conftest.py  test_b1_calibration.py  test_trading_brain_loop.py
(+2 files in other folders)
