[package]
name = "sifs-genesis-core"
version = "0.1.0"
edition = "2021"
description = "SIFS-Genesis core: K, PHI, W(n), I_SIFS, Day/Night (rayon)"
license = "MIT OR Apache-2.0"

[lib]
name = "sifs_genesis_core"
path = "src/lib.rs"

[[bin]]
name = "sifs-genesis-core"
path = "src/main.rs"

[[bin]]
name = "sifs-genesis-agent"
path = "src/agent_main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Типы Genesis для интеграции Day Phase / Baker (опционально)
genesis-core = { path = "../../deps/genesis-agi/genesis-core", optional = true }

[features]
default = []
genesis = ["dep:genesis-core"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
